[tool.poetry]
name = "recipes"
version = "0.1.0"
description = "helper scripts for recipes"
authors = ["davidschober <davidschob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
